--- a/scripts/params.template.yml
+++ b/scripts/params.template.yml
@@ -21,7 +21,7 @@ args:
   zkevm_prover_image: hermeznetwork/zkevm-prover:v8.0.0-RC16-fork.12
   use_dynamic_ports: true
   zkevm_bridge_ui_image: zkevm-bridge-ui:0006445 # local build image, 编译方式参看 docker/README.md
-  cdk_node_image: cdk:latest # local build image, 编译方式, 在 cdk 目录下执行 make build-docker
+  cdk_node_image: davidyoung2025/cdk:local # local build image, 编译方式, 在 cdk 目录下执行 make build-docker
   # 区分每条链
   deployment_suffix: '-1'
   zkevm_rollup_chain_id: $L2_CHAIN_ID
