--- a/templates/zk-claim-service-env.template
+++ b/templates/zk-claim-service-env.template
@@ -1,12 +1,12 @@
-# 用途：1. 部署合约 2. 在 L1 和 L2 claimMessage
+# ====== 私钥 ==========================================================
+# 为 MNEMONIC 的 100 个 衍生账户补充 gas
 PRIVATE_KEY=$ZK_CLAIM_SERVICE_PRIVATE_KEY
-
-# ====== 基本信息 =======================================================
-# 在 L1 的 zkBridgeReceiver（桥中继）合约地址
-L1_BRIDGE_RELAY_CONTRACT=$L1_BRIDGE_RELAY_CONTRACT
-
-# Layer2 类型编号（与合约约定一致，0/1/2 表示 zk/op/bridge）
-L2_TYPE=$L2_TYPE
+# 为 MNEMONIC_REV 的 100 个 衍生账户补充 gas
+PRIVATE_KEY_REV=$ZK_CLAIM_SERVICE_PRIVATE_KEY
+# NOTE: 自动处理 L2->L1 跨链交易使用，衍生的 100 个地址轮流在 l1 去 claim message
+MNEMONIC="$MNEMONIC"
+# NOTE: 自动处理 L1->L2 跨链交易使用，衍生的 100 个地址轮流在 l2 去 claim message
+MNEMONIC_REV="$MNEMONIC"
 
 # ====== 自动处理 L2->L1 跨链交易使用 =======================================================
 # RPC URLs
