enhance gen env script

--- a/templates/zk-claim-service-env.template
+++ b/templates/zk-claim-service-env.template
@@ -1,30 +1,30 @@
 # ====== 私钥 ==========================================================
 # 为 MNEMONIC 的 100 个 衍生账户补充 gas
-PRIVATE_KEY=$ZK_CLAIM_SERVICE_PRIVATE_KEY
+PRIVATE_KEY=${ZK_CLAIM_SERVICE_PRIVATE_KEY}
 # 为 MNEMONIC_REV 的 100 个 衍生账户补充 gas
-PRIVATE_KEY_REV=$ZK_CLAIM_SERVICE_PRIVATE_KEY
+PRIVATE_KEY_REV=${ZK_CLAIM_SERVICE_PRIVATE_KEY}
 # NOTE: 自动处理 L2->L1 跨链交易使用，衍生的 100 个地址轮流在 l1 去 claim message
-MNEMONIC="$MNEMONIC"
+MNEMONIC="${ZK_CLAIM_SERVICE_MNEMONIC}"
 # NOTE: 自动处理 L1->L2 跨链交易使用，衍生的 100 个地址轮流在 l2 去 claim message
-MNEMONIC_REV="$MNEMONIC"
+MNEMONIC_REV="${ZK_CLAIM_SERVICE_MNEMONIC}"
 
 # ====== 自动处理 L2->L1 跨链交易使用 =======================================================
 # RPC URLs
-L1_RPC_URL=$L1_RPC_URL
+L1_RPC_URL=${L1_RPC_URL}
 L2_RPC_URL=http://127.0.0.1/l2rpc
 
 # polygonZkEVMBridgeAddress
-BRIDGE_ADDRESS=$polygonZkEVMBridgeAddress
+BRIDGE_ADDRESS=${polygonZkEVMBridgeAddress}
 
 # Bridge service API
 BRIDGE_SERVICE_URL=http://127.0.0.1/bridgeservice
 
 # ======= 自动处理 L1->L2 跨链交易使用 ======================================================
 L1_RPC_URL_REV=http://127.0.0.1/l2rpc
-L2_RPC_URL_REV=$L1_RPC_URL
+L2_RPC_URL_REV=${L1_RPC_URL}
 
 # polygonZkEVML2BridgeAddress
-BRIDGE_ADDRESS_REV=$polygonZkEVML2BridgeAddress
+BRIDGE_ADDRESS_REV=${polygonZkEVML2BridgeAddress}
 
 # Bridge service API
 BRIDGE_SERVICE_URL_REV=http://127.0.0.1/bridgeservice
