--- a/templates/counter-bridge-register-env.template
+++ b/templates/counter-bridge-register-env.template
@@ -3,7 +3,7 @@ L2_RPC_URL=http://127.0.0.1/l2rpc
 # polygonZkEVMBridgeAddress
 BRIDGE_ADDRESS=${polygonZkEVMBridgeAddress}
 # L1 中继合约
-L1_BRIDGE_RELAY_CONTRACT=${L1_BRIDGE_RELAY_CONTRACT}
+L1_BRIDGE_HUB_CONTRACT=${L1_BRIDGE_HUB_CONTRACT}
 # L1 中继合约的 owner
 L1_REGISTER_BRIDGE_PRIVATE_KEY=${L1_REGISTER_BRIDGE_PRIVATE_KEY}
 # 用于部署 counter 合约
