--- a/templates/counter-bridge-register-env.template
+++ b/templates/counter-bridge-register-env.template
@@ -1,7 +1,7 @@
 L1_RPC_URL=${L1_RPC_URL}
 L2_RPC_URL=http://127.0.0.1/l2rpc
 # polygonZkEVMBridgeAddress
-BRIDGE_ADDRESS=${polygonZkEVMBridgeAddress}
+BRIDGES=${polygonZkEVMBridgeAddress}
 # L1 中继合约
 L1_BRIDGE_HUB_CONTRACT=${L1_BRIDGE_HUB_CONTRACT}
 # L1 中继合约的 owner
